--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  height: 100dvh;
 }
 
 /* Header */
@@ -32,7 +33,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 40%;
+  width: 500px;
   margin: 50px auto;
   border-radius: 20px;
   padding: 30px;
@@ -54,12 +55,12 @@ header {
 /* Buttons */
 
 .buttons {
-  margin: 10px auto;
+  margin: 30px auto;
   width: 100%;
   height: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
+  grid-gap: 30px;
   justify-content: center;
   align-items: center;
 }
@@ -78,5 +79,50 @@ header {
 .operator:hover,
 .number:hover {
   background-color: white;
+}
+
+/* Footer */
+
+footer {
+  height: 100px;
+  background-color: lightgrey;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 100%;
+}
+
+/* Responsive */
+
+@media (max-width: 992px) {
+  .container {
+    width: 300px;
+    height: 100dvh;
+    margin: 0 auto;
+  }
+  .calculator {
+    width: 100%;
+    height: 60%;
+    padding: 15px;
+    box-sizing: border-box;
+  }
+  .input {
+    width: 100%;
+    height: 80px;
+    font-size: 50px;
+    padding: 10px;
+  }
+  .buttons {
+    width: 100%;
+    grid-gap: 10px;
+  }
+  .operator,
+  .number {
+    font-size: 18px;
+    padding: 18px;
+    border-radius: 20px;
+  }
 }
 
