--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,12 @@ body {
 }
 
 .operator,
-.number {
+.number,
+.equal,
+.clear,
+.return,
+.percent,
+.add-or-substract {
   font-size: 50px;
   padding: 15px;
   cursor: pointer;
@@ -74,7 +79,12 @@ body {
 }
 
 .operator:hover,
-.number:hover {
+.number:hover,
+.equal:hover,
+.clear:hover,
+.return:hover,
+.percent:hover,
+.add-or-substract:hover {
   background-color: white;
 }
 
